--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,800;1,500&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.information {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  width: 300px;
+  height: 40px;
+  font-size: 16px;
+  padding-left: 10px;
+  margin: 5px;
+}
+
+.review {
+  height: 100px; 
+}
+
+ button {
+  width: 320px;
+  height: 40px;
+  margin-top: 15px;
+  border-radius: 25px;
+  color: #2B2A4C;
+  background-color: #B31312;
+  font-weight: 600;
+} 
+
+ button:hover {
+  cursor: pointer;
+}
+
+.movie_review {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.movie {
+  width: 800px;
+  height: auto;
+  flex-direction: column;
+  border: 5px solid black;
+  border-radius: 25px;
+  color: #B31312;
+  background-color: #2B2A4C;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
+}
+
+.box {
+  width: 800px;
+  height: auto;
+  flex-direction: column;
+  border: 5px solid black;
+  border-radius: 25px;
+  color: #B31312;
+  background-color: #2B2A4C;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+}
+
+.movie h3 {
+  margin: 20px;
+  font-weight: 400;
+}
+
+.showlabels {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  
+}
+
+.showlabels h3{
+  margin: 0px;
+}
+
+.information h1{
+  margin: 5px;
+}
+
+.showreviews {
+  margin-bottom: 10px;
 }
